<resources>
    <string name="app_name">Covid19 Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TextView">Numbers</string>
    <string name="GraphView">Analytics</string>
    <string name="SafteyMeasures">Safety</string>
    <string name="AboutView">About</string>
    <string name="pref_locale">hi-IN</string>
    <string name="TextFragmentCountryTitle">Country</string>
    <string name="TextFragmentActiveTitle">Active</string>
    <string name="TextFragmentRecoveredTitle">Recovered</string>
    <string name="TextFragmentDeadTitle">Dead</string>
    <string name="TextFragmentTotalTitle">Total</string>
    <string name="TextFragmentTodayTitle">Today</string>
    <string name="TextFragmentDiedTodayTitle">DiedToday</string>
    <string name="TextFragmentCriticalTitle">Critical</string>
    <string name="AboutFragmentDev1Title">Yash Mutha</string>
    <string name="AboutFragmentDev2Title">Anuj Mutha</string>
    <string name="AboutFragmentAppDescription">This app is developed by us for getting updated with the coronavirus information</string>
    <string name="AboutFragmentDevelopedByTitle">Developed By:</string>
    <string name="AboutFragmentSocialMediaTitle">Social Media Links</string>
    <string name="AboutFragmentPaypalTitle"><![CDATA[
        <font color=\"#253B80\">Pay</font><font color=\"#2997D8\">Pal</font>
    ]]></string>
    <string name="SafetyFragmentTitle">Safety Measures</string>
    <string name="SafetyFragmentMessage1">&quot; Wash your hands regularly &quot;</string>
    <string name="SafetyFragmentMessage2">&quot; Sanitize your hands with alcohol based sanitizer &quot;</string>
    <string name="SafetyFragmentMessage3">&quot; Practice social distancing &quot;</string>
    <string name="SafetyFragmentMessage4">&quot; Prefer Namaste. Avoid Handshakes &amp; Hugs &quot;</string>
    <string name="SafetyFragmentMessage5">&quot; Use Face Masks (Preferably 3 Layered N95) &quot;</string>
    <string name="SafetyFragmentMessage6">&quot; Try to work from home &quot;</string>
    <string name="SafetyFragmentMessage7">" Consult your doctor upon identification of sympotms "</string>
    <string-array name="countries">
        <item>View World Wide Data</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cayman Islands</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macao</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>USA</item>
        <item>Uzbekistan</item>
        <item>Vietnam</item>
        <item>Zimbabwe</item>
    </string-array>
</resources>